fix padding of filter on small screen sizes

--- a/client/views/find/find.import.less
+++ b/client/views/find/find.import.less
@@ -41,6 +41,10 @@
 			.grid(12, inherit, 7);
 			padding: 0 0 0 15px;
 
+			@media screen and (max-width: @screen-md) {
+				padding: 0;
+			}
+
 			* {
 				.transition(0.5s);
 			}
